Delete doctor works

--- a/Views/Doctors/Modify.cshtml
+++ b/Views/Doctors/Modify.cshtml
@@ -9,7 +9,7 @@
 
 <div class=" border-1 border-light border bg-light m-auto" style="width: 560px; border-radius: 8px;">
     <h1 class="my-3 text-center">Modify doctor profile</h1>
-    <form method="post" enctype="multipart/form-data" asp-action="Create" class="pt-3">
+    <form method="post" enctype="multipart/form-data" asp-action="Modify" class="pt-3">
         <div class="form-field px-3 mb-3">
             <label asp-for="firstName" class="d-block mb-1"></label>
             <input asp-for="firstName" class="d-block w-100"/>
