--- a/Views/Doctors/Details.cshtml
+++ b/Views/Doctors/Details.cshtml
@@ -24,6 +24,7 @@
             <p>@Html.DisplayFor(model => model.inami)</p>
         </div>
     </div>
-</div>
 
+</div>
+<a asp-action="Delete" asp-route-id="@Model.id" class="btn btn-danger">Delete</a>
 
